ready to pull MSMs for one hour for real

--- a/dataprep.ipynb
+++ b/dataprep.ipynb
@@ -15,8 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -167,8 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "probe_df = probe_dataframe_from_file(\"data_cache/all_probes.json\")"
@@ -185,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -278,378 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "anchor_df = anchor_dataframe_from_v2api()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>aid</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>name</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>al-tia-as42409</th>\n",
-       "      <td>1029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ar-bue-as4270</th>\n",
-       "      <td>669</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>at-klu-as42473</th>\n",
-       "      <td>393</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>at-szg-as5404</th>\n",
-       "      <td>574</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>at-vie-as1120</th>\n",
-       "      <td>335</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>at-vie-as1853</th>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>at-vie-as30971</th>\n",
-       "      <td>729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>au-bne-as4608-2</th>\n",
-       "      <td>998</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>au-bne-as4608</th>\n",
-       "      <td>331</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>au-mel-as38796</th>\n",
-       "      <td>321</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>au-syd-as135150</th>\n",
-       "      <td>888</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bd-dac-as24122</th>\n",
-       "      <td>567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>be-anr-as2611</th>\n",
-       "      <td>386</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>be-lln-as2611</th>\n",
-       "      <td>283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bg-sls-as198228</th>\n",
-       "      <td>691</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bg-sof-as197216</th>\n",
-       "      <td>545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bg-sof-as47872</th>\n",
-       "      <td>597</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bg-sof-as8866-2</th>\n",
-       "      <td>966</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bg-sof-as8866</th>\n",
-       "      <td>964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>br-sao-as22548</th>\n",
-       "      <td>385</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>bt-thi-as38740</th>\n",
-       "      <td>737</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ca-mtr-as852</th>\n",
-       "      <td>644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ca-van-as852</th>\n",
-       "      <td>633</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ca-wnp-as16395</th>\n",
-       "      <td>865</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ca-wnp-as18451</th>\n",
-       "      <td>600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ca-wtl-as4508</th>\n",
-       "      <td>744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ch-gtg-as20612</th>\n",
-       "      <td>561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ch-zrh-as34288</th>\n",
-       "      <td>971</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ch-zrh-as559</th>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ch-zrh-as9092</th>\n",
-       "      <td>463</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-mia-as2914</th>\n",
-       "      <td>368</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-mia-as33280</th>\n",
-       "      <td>639</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-mnz-as30633</th>\n",
-       "      <td>648</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-nyc-as15133</th>\n",
-       "      <td>1062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-pao-as1280</th>\n",
-       "      <td>306</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-pct-as88</th>\n",
-       "      <td>883</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-pdp-as15133</th>\n",
-       "      <td>1063</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-phx-as53824</th>\n",
-       "      <td>490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-pou-as6124</th>\n",
-       "      <td>511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-qas-as10745</th>\n",
-       "      <td>400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-qas-as14907</th>\n",
-       "      <td>374</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-qas-as393246</th>\n",
-       "      <td>638</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-rno-as3851</th>\n",
-       "      <td>771</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-rtv-as16876</th>\n",
-       "      <td>593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-sea-as15133</th>\n",
-       "      <td>976</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-sea-as2914</th>\n",
-       "      <td>280</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-sfo-as14061</th>\n",
-       "      <td>398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-sfo-as14907</th>\n",
-       "      <td>375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-sfo-as7203</th>\n",
-       "      <td>649</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-sgu-as46309</th>\n",
-       "      <td>802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-sjc-as15133</th>\n",
-       "      <td>1066</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-sjc-as22300</th>\n",
-       "      <td>547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-tuk-as13331</th>\n",
-       "      <td>1003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>us-wct-as7922</th>\n",
-       "      <td>344</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>uy-mvd-as28000</th>\n",
-       "      <td>346</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>vn-sgn-as24176</th>\n",
-       "      <td>1000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>za-cpt-as37663</th>\n",
-       "      <td>700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>za-jnb-as10474</th>\n",
-       "      <td>337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>za-jnb-as37474</th>\n",
-       "      <td>697</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>za-umr-as37668</th>\n",
-       "      <td>699</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>278 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  aid\n",
-       "name                 \n",
-       "al-tia-as42409   1029\n",
-       "ar-bue-as4270     669\n",
-       "at-klu-as42473    393\n",
-       "at-szg-as5404     574\n",
-       "at-vie-as1120     335\n",
-       "at-vie-as1853      11\n",
-       "at-vie-as30971    729\n",
-       "au-bne-as4608-2   998\n",
-       "au-bne-as4608     331\n",
-       "au-mel-as38796    321\n",
-       "au-syd-as135150   888\n",
-       "bd-dac-as24122    567\n",
-       "be-anr-as2611     386\n",
-       "be-lln-as2611     283\n",
-       "bg-sls-as198228   691\n",
-       "bg-sof-as197216   545\n",
-       "bg-sof-as47872    597\n",
-       "bg-sof-as8866-2   966\n",
-       "bg-sof-as8866     964\n",
-       "br-sao-as22548    385\n",
-       "bt-thi-as38740    737\n",
-       "ca-mtr-as852      644\n",
-       "ca-van-as852      633\n",
-       "ca-wnp-as16395    865\n",
-       "ca-wnp-as18451    600\n",
-       "ca-wtl-as4508     744\n",
-       "ch-gtg-as20612    561\n",
-       "ch-zrh-as34288    971\n",
-       "ch-zrh-as559       15\n",
-       "ch-zrh-as9092     463\n",
-       "...               ...\n",
-       "us-mia-as2914     368\n",
-       "us-mia-as33280    639\n",
-       "us-mnz-as30633    648\n",
-       "us-nyc-as15133   1062\n",
-       "us-pao-as1280     306\n",
-       "us-pct-as88       883\n",
-       "us-pdp-as15133   1063\n",
-       "us-phx-as53824    490\n",
-       "us-pou-as6124     511\n",
-       "us-qas-as10745    400\n",
-       "us-qas-as14907    374\n",
-       "us-qas-as393246   638\n",
-       "us-rno-as3851     771\n",
-       "us-rtv-as16876    593\n",
-       "us-sea-as15133    976\n",
-       "us-sea-as2914     280\n",
-       "us-sfo-as14061    398\n",
-       "us-sfo-as14907    375\n",
-       "us-sfo-as7203     649\n",
-       "us-sgu-as46309    802\n",
-       "us-sjc-as15133   1066\n",
-       "us-sjc-as22300    547\n",
-       "us-tuk-as13331   1003\n",
-       "us-wct-as7922     344\n",
-       "uy-mvd-as28000    346\n",
-       "vn-sgn-as24176   1000\n",
-       "za-cpt-as37663    700\n",
-       "za-jnb-as10474    337\n",
-       "za-jnb-as37474    697\n",
-       "za-umr-as37668    699\n",
-       "\n",
-       "[278 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aid_by_name"
    ]
   },
   {
@@ -664,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -727,8 +366,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ANCHOR_NAMES_WE_LIKE = [\n",
@@ -776,8 +417,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "am_df = anchoring_measurements_from_v2api()\n",
@@ -788,9 +431,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 86,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Let's set a one hour time window; why not 17:00 11 July 2017?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "START_TIME = int(dp.parse(\"2017-07-11T17:00:00Z\").timestamp())\n",
+    "STOP_TIME = int(dp.parse(\"2017-07-11T18:00:00Z\").timestamp())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# quick checkpoint here\n",
@@ -835,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -884,12 +548,12 @@
     "\n",
     "        \n",
     "\n",
-    "def get_msm(msm, gen=gen_dict, cachedir=None, start=None, stop=None):\n",
+    "def gen_msm(msm, gen=gen_alp, cachedir=None, start=None, stop=None):\n",
     "    \"\"\"\n",
     "    Given an MSM, fetch it from the cache or from the RIPE Atlas API.\n",
     "    Yield each separate result according to the generation function.\n",
     "    \"\"\"\n",
-    "    url = \"https://atlas.ripe.net/api/v1/measurement/%u/result/\" % (msm,)\n",
+    "    url = \"https://atlas.ripe.net/api/v2/measurements/%u/results/\" % (msm,)\n",
     "\n",
     "    params = {\"format\": \"json\"}\n",
     "    if start is not None and stop is not None:\n",
@@ -918,19 +582,28 @@
     "        # just read from the net\n",
     "        res = requests.get(url, params=params)\n",
     "        yield from gen(json.loads(res.content.decode(\"utf-8\")))\n",
-    "        "
+    "\n",
+    "def msm_dfgen(msms, cachedir=None, start=None, stop=None):\n",
+    "    for msm in msms:\n",
+    "        yield from gen_msm(msm, cachedir=cachedir, start=start, stop=stop)\n",
+    "              "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1026364/results/\n"
+     ]
+    }
+   ],
    "source": [
-    "START_TIME = int(dp.parse(\"2017-01-04T00:00:00\").strftime(\"%s\"))\n",
-    "END_TIME = int(dp.parse(\"2017-04-04T00:00:00\").strftime(\"%s\"))"
+    "df = pd.DataFrame(msm_dfgen(MSMS_WE_LIKE, cachedir=DATA_CACHE_PATH, start=START_TIME, stop=STOP_TIME))"
    ]
   },
   {
@@ -991,7 +664,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pdf"
@@ -1062,7 +737,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dfa = anchoring_measurements_from_v2api(100)"
@@ -1071,7 +748,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dfa_anchors = dfa[dfa['aid'].isin(ANCHORS_WE_LIKE)]\n",
