--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -132,23 +132,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "\n",
+    "- Find linear fit for RTT/distance (see below)\n",
+    "- Show RTTs for each distance bin and distances for each RTT bin as boxplots\n",
+    "- See how many samples per pair it takes before rvalue stops rising (run dataprep on a six hour chunk?\n",
+    "- Generate most likely distance for each RTT bin (in ms?)?\n",
+    "- Attempt actual 3D trilateration (see https://gis.stackexchange.com/questions/66/trilateration-using-3-latitude-and-longitude-points-and-3-distances) and generalize to n-lateration, calculate errors. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LinregressResult(slope=18.319142528954604, intercept=27320.097161708109, rvalue=0.81515565133594392, pvalue=0.0, stderr=0.012803912567749364)"
+       "LinregressResult(slope=9.159571264477302, intercept=13660.048580854054, rvalue=0.81515565133594392, pvalue=0.0, stderr=0.0064019562838746819)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.stats.linregress(dist_df['km'],dist_df['rtt'])"
+    "scipy.stats.linregress(dist_df['km'],dist_df['rtt']/2)"
    ]
   },
   {
@@ -160,43 +173,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LinregressResult(slope=18.012364365024663, intercept=22834.277563663811, rvalue=0.87169878724481187, pvalue=0.0, stderr=0.086401903443285688)"
+       "LinregressResult(slope=9.0061821825123314, intercept=11417.138781831905, rvalue=0.87169878724481187, pvalue=0.0, stderr=0.043200951721642844)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.stats.linregress(dist_df.groupby(['aid','pid'])['km'].min(), dist_df.groupby(['aid','pid'])['rtt'].min())"
+    "scipy.stats.linregress(dist_df.groupby(['aid','pid'])['km'].min(), dist_df.groupby(['aid','pid'])['rtt'].min()/2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.18518618013626625"
+       "0.3703723602725325"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(1e9 / 18.012364365024663) / 299792458"
+    "(1e9 / 9.0061821825123314) / 299792458"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
