--- a/dataprep.ipynb
+++ b/dataprep.ipynb
@@ -434,24 +434,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's set a one hour time window; why not 17:00 11 July 2017?"
+    "Let's set a one hour time window; why not six hours from noon UTC 11 July 2017?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "START_TIME = int(dp.parse(\"2017-07-11T17:00:00Z\").timestamp())\n",
+    "START_TIME = int(dp.parse(\"2017-07-11T12:00:00Z\").timestamp())\n",
     "STOP_TIME = int(dp.parse(\"2017-07-11T18:00:00Z\").timestamp())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -591,9 +591,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1026364/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1026366/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1026392/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1026394/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1026400/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1026402/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1042256/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1042258/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1043287/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1043289/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1404334/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1404336/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1423187/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1423189/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1437285/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1437287/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1446418/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1446420/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1583041/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1583043/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1589863/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1589865/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1591157/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1591159/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1664874/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1664876/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1665837/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1665839/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1668852/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1668854/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1768006/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1768008/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1769992/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1769994/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1790233/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1790235/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1849606/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1849608/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1990234/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/1990236/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2055769/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2055771/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2096535/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2096537/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2395061/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2395063/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2398551/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2398553/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2417651/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/2417653/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/3295750/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/3295764/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/3315654/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/3315657/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/3614642/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/3614645/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/3622419/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/3622422/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/6969365/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/6969368/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/7861647/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/7861650/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/8434916/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/8434919/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180599/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180602/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180619/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180622/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180653/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180656/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180667/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180670/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180705/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180708/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180725/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180728/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180767/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180770/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180929/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180932/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180955/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180958/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180990/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9180994/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181094/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181097/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181100/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181103/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181175/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181178/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181254/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181257/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181266/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181269/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181276/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181279/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181282/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181285/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181297/results/\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181300/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181317/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181320/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181352/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181355/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181364/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181367/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181397/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181400/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181529/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181532/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181693/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181696/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181746/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181749/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181778/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181781/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181821/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9181824/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183385/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183388/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183524/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183527/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183541/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183544/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183659/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183662/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183787/results/\n",
+      "Cache miss, retrieving https://atlas.ripe.net/api/v2/measurements/9183790/results/\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.DataFrame(msm_dfgen(MSMS_WE_LIKE, cachedir=DATA_CACHE_PATH, start=START_TIME, stop=STOP_TIME))"
    ]
@@ -607,8 +748,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aid_by_ip4 = anchor_df.loc[:,('ip4',)]\n",
@@ -633,8 +776,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['time'] = pd.to_datetime(df['time'] * 1e9)\n",
@@ -652,11 +797,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2862: PerformanceWarning: \n",
+      "your performance may suffer as PyTables will pickle object types that it cannot\n",
+      "map directly to c-types [inferred_type->mixed,key->block2_values] [items->['name', 'ip4', 'ip6', 'cc']]\n",
+      "\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "/usr/local/lib/python3.6/site-packages/IPython/core/interactiveshell.py:2862: PerformanceWarning: \n",
+      "your performance may suffer as PyTables will pickle object types that it cannot\n",
+      "map directly to c-types [inferred_type->mixed,key->block3_values] [items->['ip4', 'ip6', 'cc']]\n",
+      "\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
     "with pd.HDFStore('rtt.h5') as store:\n",
     "    store['anchor_df'] = anchor_df\n",
@@ -681,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4rc1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
