--- a/trilateration-error.ipynb
+++ b/trilateration-error.ipynb
@@ -111,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def on_unit_sphere(long1, lat1, long2, lat2):\n",
@@ -224,7 +226,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fast_min_df = min_df[min_df['minrtt'] < 40000]\n",
@@ -262,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4rc1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
