--- a/dataprep.ipynb
+++ b/dataprep.ipynb
@@ -361,6 +361,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Anchor Selection\n",
+    "\n",
     "So now we have a list of all anchoring MSMs. Select a set of anchors by name, and derive IPv4 and IPv4 ping measurements from the anchoring measurements toward those anchors."
    ]
   },
