--- a/new_paper.ipynb
+++ b/new_paper.ipynb
@@ -159,17 +159,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RIPE Atlas periodically takes *anchoring measurements...*"
+    "RIPE Atlas consists of a collection of about 10000 *probes* on which active measurements can be scheduled, and about 200 *anchors* which provide dedicated targets for active measurements from anywhere on the network. Atlas itself runs periodic *anchoring measurements* to each anchor from a relatively stable set of probes (for each anchor). Anchors and probes have self-reported locations. We presume reported locations for anchors, which are set up in coordination with the RIPE NCC, to be accurate, and assume the accuracy of probe locations to be sufficient for our purposes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add code here to retrieve or prepare data from source, if appropriate.\n",
-    "# Alternately, data preparation can be done in a separate notebook, linked from here."
+    "# Code to load data from dataprep notebook or container goes here."
    ]
   },
   {
@@ -235,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
